@@ -1,51 +1,49 @@
-<div id="boxplot_div">
-    <div id="box_plot"></div>
-    <div class='caption'>
-            <p>
-                This plot depicts boxplots for the models indicating
-                individual subject performance. The data used for the plot are
-                accuracies for individuals. Consequently, min and max refer to
-                the accuracy of the worst and best matching subjects. The dots
-                refer to the mean accuracies of individual participants.
-            </p>
+<div id="box_plot"></div>
+<div class='caption'>
+        <p>
+            This plot depicts boxplots for the models indicating
+            individual subject performance. The data used for the plot are
+            accuracies for individuals. Consequently, min and max refer to
+            the accuracy of the worst and best matching subjects. The dots
+            refer to the mean accuracies of individual participants.
+        </p>
 
-            <button name="figsave" type="button" class="button_result" plot_type="box_plot">Save Plot</button>
-        </div>
+        <button name="figsave" type="button" class="button_result" plot_type="box_plot">Save Plot</button>
+    </div>
 
-    <script>
-        evaluationContents['box_plot'] = {
-            data: {{PLOT_DATA}},
-            layout: {
-                hovermode: 'closest',
-                showlegend: true,
-                legend: {
-                    x: 0,
-                    y: -0.25,
-                    orientation: 'h'
-                },
-                title: {text: 'Subject Performance Boxplot'},
-                yaxis: {title: {text: 'Predictive Accuracy'}, rangemode: 'nonnegative'},
-                xaxis: {categoryarray: {{ORDERING}}}
+<script>
+    evaluationContents['box_plot'] = {
+        data: {{PLOT_DATA}},
+        layout: {
+            hovermode: 'closest',
+            showlegend: true,
+            legend: {
+                x: 0,
+                y: -0.25,
+                orientation: 'h'
             },
-            config: {
-                modeBarButtonsToRemove: ['toImage',
-                                        'sendDataToCloud',
-                                        'select2d',
-                                        'toggleSpikelines',
-                                        'hoverCompareCartesian',
-                                        'hoverClosestCartesian',
-                                        'lasso2d',
-                                        'zoom2d',
-                                        'pan2d',
-                                        'autoScale2d'],
-                displaylogo: false
-            }
+            title: {text: 'Subject Performance Boxplot'},
+            yaxis: {title: {text: 'Predictive Accuracy'}, rangemode: 'nonnegative'},
+            xaxis: {categoryarray: {{ORDERING}}}
+        },
+        config: {
+            modeBarButtonsToRemove: ['toImage',
+                                    'sendDataToCloud',
+                                    'select2d',
+                                    'toggleSpikelines',
+                                    'hoverCompareCartesian',
+                                    'hoverClosestCartesian',
+                                    'lasso2d',
+                                    'zoom2d',
+                                    'pan2d',
+                                    'autoScale2d'],
+            displaylogo: false
         }
+    }
 
-        // Plot the data
-        Plotly.newPlot("box_plot",
-                        evaluationContents['box_plot'].data,
-                        evaluationContents['box_plot'].layout,
-                        evaluationContents['box_plot'].config);
-    </script>
-</div>
+    // Plot the data
+    Plotly.newPlot("box_plot",
+                    evaluationContents['box_plot'].data,
+                    evaluationContents['box_plot'].layout,
+                    evaluationContents['box_plot'].config);
+</script>
