@@ -8,3 +8,4 @@
 - Add more information to HTML output benchmark information
 - Add person_train to MFA model
 - Fix module import problems in modelimporter
+- Add tab-based visualization
